clusters/folly/apps/kata-demo/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kata-demo
  labels:
    app.kubernetes.io/name: kata-demo
    app.kubernetes.io/part-of: kata-demo
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
