clusters/folly/apps/kata-demo/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kata-demo
  namespace: kata-demo
  labels:
    app.kubernetes.io/name: kata-demo
    app.kubernetes.io/part-of: kata-demo
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    app.kubernetes.io/name: kata-demo
    app.kubernetes.io/part-of: kata-demo
