clusters/folly/apps/kata-demo/04-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: kata-demo
  namespace: kata-demo
  annotations:
    cert-manager.io/cluster-issuer: ${CERT_CLUSTER_ISSUER}
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: &hostname "kata.${SECRET_DOMAIN}"
    - name: https
      protocol: HTTPS
      port: 443
      hostname: *hostname
      tls:
        certificateRefs:
          - kind: Secret
            name: *hostname
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kata-demo
  namespace: kata-demo
spec:
  parentRefs:
    - name: kata-demo
  hostnames:
    - "kata.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: kata-demo
          port: 8080
